--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Movie App</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-
-</head>
+<%include head%>
 <body>
+
+    <%include navbar%>
 
     <div class="container">
         <div class="row header">
